# CalculateDragAndDrop

./: .gitattributes  .gitignore  Button.h  CMakeCache.txt  CMakeLists.txt  Calculate.h  CreateHistori.h  GradientFont.h  LineEdit.h  LogicButton.h  Makefile  Title.h  Window.h  a.txt  build.sh  cmake_install.cmake  decimal.hpp  gmon.out  isNumber.hpp  main  main.cpp  test  test.cpp  test1  test1.cpp
Calculate/: Calculate.hpp  Check.hpp
UI/: Application.hpp  Button.hpp  CreateHistori.hpp  Grid.hpp  Label.hpp  LineEdit.hpp  LogicButton.hpp  MainWidget.hpp  NewHistoriElement.hpp  RGB.hpp  Setting.hpp  TabWidget.hpp  Title.hpp  UI.hpp  Window.hpp
srv/: main.cpp
srv/General/: replace.hpp
srv/UI/: SelectColor.hpp  Title.hpp  UI.hpp
srv/UI/Application/: Application.cpp  Application.hpp
srv/UI/Button/: Button.hpp
srv/UI/CreateHistory/: CreateHistory.cpp  CreateHistory.hpp
srv/UI/General/Button/: Button.cpp
srv/UI/General/GradientSettings/: GradientSettings.cpp  GradientSettings.hpp
srv/UI/General/Label/: Label.cpp  Label.hpp
srv/UI/General/LineEdit/: LineEdit.cpp  LineEdit.hpp
srv/UI/Grid/: Grid.cpp  Grid.hpp
srv/UI/Label/: Label.hpp
srv/UI/LineEdit/: LineEdit.cpp  LineEdit.hpp
srv/UI/LogicButton/: LogicButton.cpp  LogicButton.hpp
srv/UI/MainWidget/: MainWidget.cpp  MainWidget.hpp
srv/UI/NewHistoryElement.hpp/: NewHistoryElement.cpp  NewHistoryElement.hpp
srv/UI/RGB/: RGB.hpp
srv/UI/SelectColor/: SelectColor.hpp
srv/UI/SelecterColor/: build.sh
srv/UI/SelecterColor/AlphaSlider/: AlphaSlider.cpp  AlphaSlider.hpp
srv/UI/SelecterGradient/: build.sh  main  main.cpp
srv/UI/Setting/: Setting.cpp  Setting.hpp
srv/UI/TabWidget/: TabWidget.cpp  TabWidget.hpp
srv/UI/Title/: Title.hpp
srv/UI/Window/: Window.cpp  Window.hpp
srv/test_f/: Alphaslider.hpp  Colorpicker.cpp  Colorpicker.hpp  Hueslider.cpp  Hueslider.hpp  main
srv/test_g/: GradientEditor.cpp  GradientEditor.hpp  GradientStrip.hpp  gradientSettings.cpp  main
test_f/: alphaslider.cpp  alphaslider.h  colorpicker.cpp  colorpicker.h  hueslider.cpp  hueslider.h  main  main.cpp
test_g/: gradient_editor.cpp  gradient_editor.h  gradient_strip.cpp  main  main.cpp
(+10 files in other folders)
